--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>core-db</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>dev.sol.util</groupId>
+            <artifactId>core-utils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
